# mcp-gemini-imggen

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/mcp_gemini_imggen/: __main__.py  server.py
