[project]
name = "mcp-gemini-imggen"
version = "1.0.0"
description = "Token-optimized MCP server for Gemini image generation - Returns file paths only (~20 tokens vs 2.4M tokens). Requires uv for dependency management."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "gemini", "image-generation", "claude-code", "ai", "uv"]
authors = [
    {name = "mcp-gemini-imggen contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/mcp-gemini-imggen"
Repository = "https://github.com/YOUR_USERNAME/mcp-gemini-imggen"
Issues = "https://github.com/YOUR_USERNAME/mcp-gemini-imggen/issues"
Documentation = "https://github.com/YOUR_USERNAME/mcp-gemini-imggen#readme"

[project.scripts]
mcp-gemini-imggen = "mcp_gemini_imggen.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gemini_imggen"]
